--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
+/* Global Theme Styles */
+:root {
+  --primary: #4e03e2;
+  --secondary: #31343d;
+  --accent: #31343d;
+  --highlight: #b12704;
+  --light: #e8e9ed;
+  --dark: #343f47;
+  --darker: #2b323c;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
-.App-header {
-  background-color: #282c34;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  /* font-family: "Roboto", sans-serif; */
+  font-weight: 600;
+  font-size: 20px;
+  color: #88abb8;
+}
+
+p {
+  /* font-family: "Roboto", sans-serif; */
+  font-size: 16px;
+  color: #9fbec9;
+}
+
+.pageContainer {
+  color: var(--light);
+  background-color: var(--dark);
   min-height: 100vh;
+}
+
+main {
+  padding: 80px;
+}
+
+/* Behavior */
+.flex-row {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
+/* Buttons */
+.btn {
+  color: var(--light);
+  padding: 5px 10px;
+  margin: 10px 0;
+  background-color: transparent;
+  border: 2px solid var(--light);
+  border-radius: 25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn:hover {
+  background-color: var(--darker);
 }
