--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
 :root {
   --primary: #4e03e2;
   --secondary: #31343d;
-  --accent: #31343d;
-  --highlight: #b12704;
+  --accent: #88abb8;
+  --highlight: #d8ecf3;
   --light: #e8e9ed;
   --dark: #343f47;
   --darker: #2b323c;
@@ -11,17 +11,13 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Montserrat", sans-serif;
 }
 
-code {
+/* codeFont {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
+} */
 
 h1,
 h2,
@@ -29,15 +25,19 @@ h3,
 h4,
 h5,
 h6 {
-  /* font-family: "Roboto", sans-serif; */
   font-weight: 600;
   font-size: 20px;
-  color: #88abb8;
+  color: #d8ecf3;
+}
+
+li {
+  list-style: none;
 }
 
 p {
-  /* font-family: "Roboto", sans-serif; */
-  font-size: 16px;
+  font-size: 14px;
+  font-weight: 300;
+  letter-spacing: 0.02em;
   color: #9fbec9;
 }
 
@@ -45,10 +45,12 @@ p {
   color: var(--light);
   background-color: var(--dark);
   min-height: 100vh;
+  display: flex;
+  justify-content: center;
 }
 
 main {
-  padding: 80px;
+  padding: 120px 80px 80px 80px;
 }
 
 /* Behavior */
@@ -59,14 +61,36 @@ main {
 
 /* Buttons */
 .btn {
-  color: var(--light);
+  font-family: "Montserrat", sans-serif;
+  color: var(--accent);
   padding: 5px 10px;
   margin: 10px 0;
   background-color: transparent;
-  border: 2px solid var(--light);
+  border: 1px solid var(--accent);
   border-radius: 25px;
+  transition: 0.5s;
 }
 
 .btn:hover {
+  color: #ffffff;
   background-color: var(--darker);
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 900px) {
+  nav {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  header .headerLogo {
+    display: block;
+    margin: 5px 0px;
+    height: 50px;
+    width: 100%;
+    text-align: center;
+    font-size: 2.3rem;
+  }
 }
