--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,17 +2,18 @@
 .navlinks {
   display: flex;
   flex: wrap;
-  position: fixed;
-  top: 0;
+  position: relative;
   right: 0;
 }
 
 .navitem {
   color: #dcdcde;
-  margin: 10px;
-  padding: 10px;
+  padding-left: 5vw;
+  transition: 0.5s;
 }
 
 .navitem:hover {
-  background-color: #dcdcde;
+  color: #ffffff;
+  transition: 0.5s;
+  cursor: pointer;
 }
